# sudoquest_python

./: .gitignore  README.md  main.py  pyvenv.cfg  requirements.txt  requirements_dev.txt  setup.cfg
assets/: resources.json
docs/: README.md  _config.yml  table.js
docs/_data/: navigation.yml
docs/_ffrpg325/: adventuring.md  character-creation.md  equipment.md  game-mastering.md  jobs.md  magic.md  playguide.md  races.md  skill-suppliment.md  skills.md  summoning.md
docs/_ffrpg325/appendicies/: glossary.md  monster-creation-system.md  statuses.md
docs/_ffrpg325/part0/: introduction.md  prelude.md
docs/_ffrpg325/part1/: advantages-disadvantages.md  character-advancement.md  character-building-example.md  equipment.md  jobs.md  races.md  skills.md
docs/_ffrpg350/: introduction.md  jobs.md  magic.md
docs/_pages/: about.md  ffrpg3.md  version_history.md
docs/_posts/: 2021-04-04-new-system-who-dis.md  2021-04-26-double-down.md  2022-02-02-ressurection.md
docs/_sudoquest/: artificial_intelligence.md  battle.md  battle_ai.md  character.md  classes.md  default.md  difficulty.md  enemies.md  features.md  gameplay.md  glossary.md  interface.md  levels.md  map.md  mechanics.md  overview.md  puzzle_quest.md  quests.md  raw_notes.md  skills.md  story.md  sudoku_ai.md  technical.md  version_plan.md
docs/docs/: Updates.md  index.md  index.old.md
src/: custom_events.py  sudoquest_game.py
src/components/: sudoquest_audio_manager.py  sudoquest_screen_manager.py
src/screens/: background_screen.py  sudoki_ai_test.py  sudoku_screen.py
src/utils/: sudoku_data.py
(+38 files in other folders)
