[metadata]
name = Sudoquest
description = A Puzzle RPG based on Sudoku
author = Platinum Leo, LLC
license = ???
platforms = unix, linux, osx, win32
classifiers =
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3 :: Only
  Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
package_dir = 
  =src
packages=find:
zip_safe = no

[options.extras_require]
testing =
  pytest>=6.0
  pytest-cov>=2.0
  flake8>=3.9
  tox>=3.24

[options.packages.find]
where=src

[flake8]
max-line-length = 160
